// Copyright (C) 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpx.mcp_router.v1;

option go_package = "github.com/mcpany/core/proto/mcp_router/v1";

import "google/protobuf/struct.proto"; // For generic JSON-like data

// Represents an MCP Tool exposed by the aggregator
message Tool {
     string name = 1;                   // Unique name, e.g., "serviceName/methodName" or a hash
     string display_name = 2;         // User-friendly name
     string description = 3;          // Description from annotation
     string service_id = 4;           // The ID of the registered user service that provides this tool
     string underlying_method_fqn = 5; // Fully qualified name of the gRPC method, e.g., /pkg.UserService/Method
     string request_type_fqn = 6;     // Fully qualified name of the underlying method's request message
     string response_type_fqn = 7;    // Fully qualified name of the underlying method's response message
     google.protobuf.Struct input_schema = 8;
     google.protobuf.Struct output_schema = 9;
     ToolAnnotations annotations = 11;
     bool is_stream = 12;
}

message ToolAnnotations {
     string title = 1;
     // If true, the tool does not modify its environment.
     // Default: false
     bool read_only_hint = 2;
     // If true, the tool may perform destructive updates to its environment. If
     // false, the tool performs only additive updates.
     // (This property is meaningful only when ReadOnlyHint == false.)
     // Default: true
     bool destructive_hint = 3;
     // If true, calling the tool repeatedly with the same arguments will have no
     // additional effect on the its environment.
     // (This property is meaningful only when ReadOnlyHint == false.)
     // Default: false
     bool idempotent_hint = 4;
     // If true, this tool may interact with an "open world" of external entities. If
     // false, the tool's domain of interaction is closed. For example, the world of
     // a web search tool is open, whereas that of a memory tool is not.
     // Default: true
     bool open_world_hint = 5;
     google.protobuf.Struct input_schema = 6;
     google.protobuf.Struct output_schema = 7;
}

message ListToolsRequest {
    // Future: filtering options
}

message ListToolsResponse {
    repeated Tool tools = 1;
}

message ExecuteToolRequest {
     string tool_id = 1;                     // ID of the tool to execute
     google.protobuf.Struct inputs = 2;     // Actual inputs for the tool, as a JSON-like object
                                          // The fields should match the fields of the underlying gRPC method's request message
}

message ExecuteToolResponse {
     google.protobuf.Struct outputs = 1;    // Actual outputs from the tool, as a JSON-like object
                                          // The fields will match the fields of the underlying gRPC method's response message
}

// A Prompt is a pre-defined template for interacting with a language model.
message Prompt {
     string id = 1;
     string name = 2;
     string description = 3;
     string template = 4;
     google.protobuf.Struct input_schema = 5;
}

message ListPromptsRequest {}

message ListPromptsResponse {
    repeated Prompt prompts = 1;
}

// A Resource is a piece of data that can be used by tools or prompts.
message Resource {
     string id = 1;
     string name = 2;
     string description = 3;
     string type = 4; // e.g., "text", "image", "url"
     bytes content = 5;
}

message ListResourcesRequest {}

message ListResourcesResponse {
    repeated Resource resources = 1;
}

service McpRouter {
    rpc ListTools(ListToolsRequest) returns (ListToolsResponse);
    rpc ExecuteTool(ExecuteToolRequest) returns (ExecuteToolResponse);

    rpc ListPrompts(ListPromptsRequest) returns (ListPromptsResponse);
    rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
}
